fix mint button on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,8 @@ main {
   padding-right: 20px;
   padding-top: 12px;
   padding-bottom: 12px;
-  width: 388px;
+  width: 100%;
+  max-width: 388px;
   height: 64px;
   border-radius: 12.6858px;
 
